--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,5 +1,5 @@
-<script src="{{ "/assets/js/jquery.min.js" | prepend: site.url }}"></script>
-<script src="{{ "/assets/js/bootstrap.min.js" | prepend: site.url }}"></script>
+<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
 <script>
