--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
           <ul class="list-inline">
             {% for page in site.pages %}
               {% if page.title %}
-                 <li><a href="{{ page.url | prepend: site.url }}">{{ page.title }}</a></li>
+                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
               {% endif %}
             {% endfor %}
           </ul>
@@ -56,7 +56,7 @@
           <p><a href="{{ site.url }}" target="_blank">{{ site.title }}</a> | Gesture by <a href="{{ site.author_url }}" target="_blank">{{ site.author }}</a></p>
           <p>Built With All The <i class="fa fa-heart"></i> In The World</p>
           <!--<p>Content Delivered By <a href="#"><img src="{{ "/assets/img/maxcdn.png" | prepend: site.url }}" alt=""></a></p> -->
-          <p>Hosted By The Awesome <a href="#"><img src="{{ "/assets/img/gh-logo.svg" | prepend: site.url }}" class="gh-logo" alt=""></a></p>
+          <p>Hosted By The Awesome <a href="#"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
         </div>
       </div>
 
