--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     <div id="fb-root"></div>
-    <script src="{{ "/assets/js/ScoopThemes.js" | prepend: site.url }}"></script>
+    <script src="/assets/js/ScoopThemes.js"></script>
 
     {% include header.html %}
 
