--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.url }}"><img src="/assets/img/logo.png" alt="{{ site.title }}"></a>
+            <a class="navbar-brand" href="/"><img src="/assets/img/logo.png" alt="{{ site.title }}"></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
