--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,16 +18,18 @@
 
     <!-- for Twitter -->          
     <meta name="twitter:card" content="photo">
-
     <meta name="twitter:site" content="@ScoopThemes">
-
     <meta name="twitter:title" content="{% if page.path contains '_posts' %} Free #Bootstrap {{ page.title }} - {{ page.small_desc }}{% else %} Open Source High Crafted #Bootstrap Templates {{ site.url }} {% endif %}">
-
     <meta name="twitter:description" content="{{ page.small_desc }}">
-
     <meta name="twitter:image" content="{% if page.path contains '_posts' %}{{ page.preview_link | append: "preview.jpg" | prepend: site.url | prepend: "http://" }}{% else %}{{ "/assets/img/logo_blue.png" }}{% endif %}">
-
     <meta name="twitter:url" content="{{page.url}}">
+
+    <!-- for Facebook -->          
+    <meta property="og:title" content="{% if page.path contains '_posts' %} {{ page.title }} - {{ page.small_desc }}{% else %} Open Source High Crafted #Bootstrap Templates {{ site.url }} {% endif %}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="{% if page.path contains '_posts' %}{{ page.preview_link | append: "preview.jpg" | prepend: site.url | prepend: "http://" }}{% else %}{{ "/assets/img/logo_blue.png" }}{% endif %}" />
+    <meta property="og:url" content="{{page.url}}" />
+    <meta property="og:description" content="{{ page.description }}" />
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
