--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
               <li class="dropdown">
                 <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Templates <i class="fa fa-angle-down"></i> </a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="/all-templates.html"><i class="fa fa-bullhorn"></i> All Templates and Themes</a></li>
+                  <li><a href="/all-templates.html"><i class="fa fa-bullhorn"></i> All Templates & Themes</a></li>
                   <li><a href="/popular.html"><i class="fa fa-heart"></i> Popular Themes</a></li>
                 </ul>
               </li>
