--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,15 @@ layout: default
 <div class="container-fluid page-heading">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-7">
 				<div class="page-header">
 					<h1>{{ page.title }} <span>— {{ page.small_desc }}</span></h1>
 				</div>
+			</div>
+			<div class="col-md-5">
+				<div class="home-ad">
+			        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=scoopthemes" id="_carbonads_js"></script>
+			    </div>
 			</div>
 		</div>
 	</div>
