--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -199,12 +199,12 @@ body{
 
 }
 .st-jumbo{
-	height:400px;
+	height:420px;
 	background:url('../img/bg1.jpg') no-repeat center center;
 	background-size: cover;
 	.st-jumbo-overlay{
 		width: 100%;
-		height: 400px;
+		height: 420px;
 		background:rgba(0,17,35,.8);
 	}
 	.jumbo-details{
@@ -471,6 +471,7 @@ footer img{
 	@include box-shadow(0px 1px 4px rgba(0,0,0,.1));
 	.page-header{
 		border-bottom: 0;
+		margin:65px 0 55px;
 		h1{
 			color:$white-color;
 			span{
@@ -595,6 +596,54 @@ article{
 .result.error span{
   margin-right: 5px;
 }
+
+.home-ad{
+	div#carbonads {
+		padding: 10px;
+		max-width: 400px;
+		position: relative;
+		margin: 0 auto;
+		border: 1px solid #909BA5;
+		background: rgba(255, 255, 255, 0.3);
+		border-radius: 3px;
+		margin-top: 25px;
+		a.carbon-img{
+			display: inline-block;
+			float:left;
+		}
+		.carbon-wrap{
+			&:after{
+				content:"";
+				display: block;
+				clear:both;
+			}
+		}
+		.carbon-text { 
+		    font-size: 12px;
+			text-align: left;
+			color: #FFF;
+			display: block;
+			width: 245px;
+			float: left;
+			padding-left: 10px;
+			&:hover{
+				text-decoration: none;
+			}
+		}
+		.carbon-poweredby {
+		    font-size: 75%;
+			bottom: 10px;
+			left: 150px;
+			position: absolute;
+			color: #F2F2F2;
+		}
+
+	}
+}
+
+
+
+
 
 
 
