--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,15 +31,15 @@
             Tweet
             </a>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&repo=Templates&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20"></iframe>
+            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=watch&amp;count=true"  class="github-follow" ></iframe>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&repo=Templates&type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="55" height="20"></iframe>
+            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=fork&amp;count=true" class="github-fork"></iframe>
 
           </div>
 
           <div>
-            <g:follow href="https://plus.google.com/106177833169347297877" rel="author"></g:follow>
-            <g:plusone size="medium"></g:plusone>
+            <div class="g-follow" data-href="https://plus.google.com/106177833169347297877" data-rel="author"></div>
+            <div class="g-plusone" data-size="medium"></div>
           </div>
 
           <div class="fb-like" data-href="https://www.facebook.com/{{ site.facebook_username }}" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
@@ -56,7 +56,7 @@
           <p><a href="{{ site.url }}" target="_blank">{{ site.title }}</a> | Gesture by <a href="{{ site.author_url }}" target="_blank">{{ site.author }}</a></p>
           <p>Built With All The <i class="fa fa-heart"></i> In The World</p>
           <!--<p>Content Delivered By <a href="#"><img src="{{ "/assets/img/maxcdn.png" | prepend: site.url }}" alt=""></a></p> -->
-          <p>Hosted By The Awesome <a href="#"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
+          <p>Hosted By The Awesome <a href="https://pages.github.com/" target="_blank"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
         </div>
       </div>
 
