--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: default
 			</div>
 			<div class="col-md-5">
 				<div class="home-ad">
-			        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=scoopthemes" id="_carbonads_js"></script>
+			        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&&amp;placement=scoopthemes" id="_carbonads_js"></script>
 			    </div>
 			</div>
 		</div>
