--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
       
       <div class="col-md-6 right-align">
         <div class="by">
-          <p><a href="{{ site.url }}" target="_blank">{{ site.title }}</a> | Gesture by <a href="{{ site.author_url }}" target="_blank">{{ site.author }}</a></p>
+          <p><a href="/" target="_blank">{{ site.title }}</a> | Gesture by <a href="{{ site.author_url }}" target="_blank">{{ site.author }}</a></p>
           <p>Built With All The <i class="fa fa-heart"></i> In The World</p>
           <!--<p>Content Delivered By <a href="#"><img src="{{ "/assets/img/maxcdn.png" | prepend: site.url }}" alt=""></a></p> -->
           <p>Hosted By The Awesome <a href="https://pages.github.com/" target="_blank"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
@@ -65,10 +65,10 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div class="line-divider "></div>
+        <div class="line-divider"></div>
 
         <div class="copyrights">
-          All Themes and Templates Under The <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a> by <a href="{{ site.url }}">Scoop Themes</a>
+          All Themes and Templates Under The <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a> by <a href="/">Scoop Themes</a>
         </div>
 
       </div>
