--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,9 +39,9 @@
               </li>
 
             </ul>
-            <h3 class="navbar-right slogan hidden-xs">
-              We're Just Warming Up <span class="fa fa-bolt"></span>
-            </h3>
+            <div class="navbar-right slogan hidden-xs">
+              <img src="/assets/img/donate.png" alt="">
+            </div>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
