--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -566,8 +566,9 @@ article{
 	}
 }
 .slogan{
-	margin:22px 0 0;
+	margin:20px 0 0;
 	color:$white-color;
+	border-bottom:2px solid $white-color;
 	padding-bottom:10px;
 }
 .popular-items{
