--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
-            {% if page.small_desc %} - {{ page.small_desc }}{% else %} - {{ site.site_solgan }}{% endif %}
-    </title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}{% if page.small_desc %} - {{ page.small_desc }}{% else %} - {{ site.site_solgan }}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
     <link rel="shortcut icon" href="/assets/img/favicon.png">
