--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -199,12 +199,12 @@ body{
 
 }
 .st-jumbo{
-	height:420px;
+	height:480px;
 	background:url('../img/bg1.jpg') no-repeat center center;
 	background-size: cover;
 	.st-jumbo-overlay{
 		width: 100%;
-		height: 420px;
+		height: 480px;
 		background:rgba(0,17,35,.8);
 	}
 	.jumbo-details{
@@ -221,7 +221,7 @@ body{
 		font-size: 60px;
 		font-weight: $weight-light;
 		margin-bottom: 40px;
-		margin-top: 40px;
+		margin-top: 70px;
 		color:$white-color;
 	}
 	.jumbo-md{
@@ -252,7 +252,7 @@ body{
 .navbar{
 	@include border-radius(0);
 	&.navbar-default{
-		background:$brand-primary;
+		background:#55ACF7;
 		border:none;
 		padding-top:10px;
 		padding-bottom: 10px;
