--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,12 @@
                   Bootstrap
                   <span class="fa fa-external-link"></span></a>
               </li>
-
+            </ul>
+            <ul class="nav navbar-nav navbar-right social-links">
+              <li><a href="https://www.facebook.com/scoopthemes" target="_blank"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="https://www.twitter.com/scoopthemes" target="_blank"><span class="fa fa-twitter"></span></a></li>
+              <li><a href="https://plus.google.com/+Scoopthemes" target="_blank"><span class="fa fa-google-plus"></span></a></li>
+              <li><a href="https://github.com/ScoopThemes" target="_blank"><span class="fa fa-github-alt"></span></a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
