--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -288,6 +288,11 @@ body{
 				padding-bottom:30px;
 			}
 		}
+		&.social-links{
+			a{
+				font-size:20px;
+			}
+		}
 	}
 	.navbar-brand{
 		padding-top:15px;
