--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}{% if page.small_desc %} - {{ page.small_desc }}{% else %} - {{ site.site_solgan }}{% endif %}</title>
+    <meta name="p:domain_verify" content="c5d8244f3464cec1ca752c16d6888e54"/>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
     <link rel="shortcut icon" href="/assets/img/favicon.png">
