--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-control" content="public">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}{% if page.small_desc %} - {{ page.small_desc }}{% else %} - {{ site.site_solgan }}{% endif %}</title>
     <meta name="p:domain_verify" content="c5d8244f3464cec1ca752c16d6888e54"/>
