--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,4 +1,4 @@
-<script src="/assets/js/jquery.min.js"></script>
+
 <script src="/assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
@@ -43,4 +43,20 @@
 	        }
 	    });
 	};
+
+
+	/* <![CDATA[ */
+	    (function() {
+	        var s = document.createElement('script');
+	        var t = document.getElementsByTagName('script')[0];
+
+	        s.type = 'text/javascript';
+	        s.async = true;
+	        s.src = '//api.flattr.com/js/0.6/load.js?'+
+	                'mode=auto&uid=gargamel&language=sv_SE&category=text';
+
+	        t.parentNode.insertBefore(s, t);
+	    })();
+	/* ]]> */
+
 </script>
