--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
     <meta property="og:image" content="{% if page.path contains '_posts' %}{{ page.preview_link | append: "preview.jpg" | prepend: site.url | prepend: "http://" }}{% else %}{{ "/assets/img/logo_blue.png" | prepend: site.url | prepend: "http://" }}{% endif %}" />
     <meta property="og:url" content="{{page.url}}" />
     <meta property="og:description" content="{{ page.description }}" />
+    <script src="/assets/js/jquery.min.js"></script>
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
