--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -199,12 +199,12 @@ body{
 
 }
 .st-jumbo{
-	height:480px;
+	height:600px;
 	background:url('../img/bg1.jpg') no-repeat center center;
 	background-size: cover;
 	.st-jumbo-overlay{
 		width: 100%;
-		height: 480px;
+		height: 600px;
 		background:rgba(0,17,35,.8);
 	}
 	.jumbo-details{
@@ -212,6 +212,7 @@ body{
 		color: #fff;
 		text-align: center;
 		width:100%;
+		padding-top:100px;
 	}
 	p{
 		font-weight: $weight-light;
@@ -221,7 +222,7 @@ body{
 		font-size: 60px;
 		font-weight: $weight-light;
 		margin-bottom: 40px;
-		margin-top: 70px;
+		margin-top: 90px;
 		color:$white-color;
 	}
 	.jumbo-md{
@@ -256,7 +257,28 @@ body{
 		border:none;
 		padding-top:10px;
 		padding-bottom: 10px;
-		
+		&.scrolling{
+			padding-top:0px;
+			padding-bottom: 0px;
+			@include transition();
+			.navbar-nav{
+				> li > a{
+					padding-top:19px;
+					padding-bottom:17px;
+					@include transition();
+				}
+			}
+			.navbar-brand{
+				padding-top: 10px;
+				padding-bottom: 10px;
+				height: 55px;
+				@include transition();
+				img{
+					height: 35px;
+					@include transition();
+				}
+			}
+		}
 		&.main-nav{
 			.navbar-nav{
 				> li{
@@ -301,6 +323,7 @@ body{
 		img{
 			width: auto;
 			height: 50px;
+			@include transition();
 		}
 	}
 }
@@ -661,7 +684,9 @@ article{
 
 .github-follow{
 	height:20px;
-	width:80px;
+	width:50px;
+	margin-right:20px;
+	margin-left:20px;
 	border:none;
 }
 .github-fork{
