--- a/templates/Coming-Soon/index.html
+++ b/templates/Coming-Soon/index.html
@@ -31,9 +31,69 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .home-ad{
+            position: fixed;
+            right: 20px;
+            top:200px;
+            border: 1px solid #f2f2f2;
+            background: rgb(255, 255, 255);
+            border-radius: 0;
+            z-index: 9999;
+        }
+        .home-ad .close{
+            float: right;
+            color: #FFF;
+            background: #6B6B6B;
+            width: 20px;
+            height: 20px;
+            line-height: 16px;
+            display: inline-block;
+            font-size: 12px;
+            font-weight: normal;
+            text-align: center;
+            text-decoration: none;
+            text-shadow: none;
+            margin-bottom: 5px;
+        }
+        .home-ad div#carbonads {
+              padding: 10px;
+              max-width: 150px;
+        }
+        .home-ad div#carbonads a.carbon-img {
+            display: inline-block;
+            float: left; 
+        }
+        .home-ad div#carbonads .carbon-wrap:after {
+            content: "";
+            display: block;
+            clear: both; 
+        }
+        .home-ad div#carbonads .carbon-text {
+            font-size: 12px;
+            text-align: left;
+            color: #333;
+            display: block;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            clear: both;
+        }
+        .home-ad div#carbonads .carbon-text:hover {
+            text-decoration: none; 
+        }
+        .home-ad div#carbonads .carbon-poweredby {
+            font-size: 75%;
+            color: #bebebe; 
+        }
+    </style>
 </head>
 
 <body>
+
+    <div class="home-ad">
+        <a href="javascript:void(0)" class="close">x</a>
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=scoopthemes" id="_carbonads_js"></script>
+    </div>
 
     <div class="cloud floating">
         <img src="assets/img/cloud.png" alt="Scoop Themes">
@@ -109,6 +169,10 @@ $(document).ready( function () {
             if ( $form.validate() ) { register($form); }
         });
     }
+
+    $('.home-ad .close').on('click', function(){
+        $(this).parent().toggle('fast');
+    });
 });
 
 function appendResult(userText , className, iconClass){
