--- a/templates/SevenApp/index.html
+++ b/templates/SevenApp/index.html
@@ -30,9 +30,70 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+        .home-ad{
+            position: fixed;
+            right: 20px;
+            top:200px;
+            border: 1px solid #f2f2f2;
+            background: rgb(255, 255, 255);
+            border-radius: 0;
+            z-index: 9999;
+        }
+        .home-ad .close{
+            float: right;
+            color: #FFF;
+            background: #6B6B6B;
+            width: 20px;
+            height: 20px;
+            line-height: 16px;
+            display: inline-block;
+            font-size: 12px;
+            font-weight: normal;
+            text-align: center;
+            text-decoration: none;
+            text-shadow: none;
+            margin-bottom: 5px;
+        }
+        .home-ad div#carbonads {
+              padding: 10px;
+              max-width: 150px;
+        }
+        .home-ad div#carbonads a.carbon-img {
+            display: inline-block;
+            float: left; 
+        }
+        .home-ad div#carbonads .carbon-wrap:after {
+            content: "";
+            display: block;
+            clear: both; 
+        }
+        .home-ad div#carbonads .carbon-text {
+            font-size: 12px;
+            text-align: left;
+            color: #333;
+            display: block;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            clear: both;
+        }
+        .home-ad div#carbonads .carbon-text:hover {
+            text-decoration: none; 
+        }
+        .home-ad div#carbonads .carbon-poweredby {
+            font-size: 75%;
+            color: #bebebe; 
+        }
+    </style>
+
 </head>
 
 <body>
+
+    <div class="home-ad">
+        <a href="javascript:void(0)" class="close">x</a>
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=scoopthemes" id="_carbonads_js"></script>
+    </div>
 
     <div class="pre-loader">
         <div class="load-con">
@@ -856,6 +917,10 @@
     <script>
         $(document).ready(function() {
             appMaster.preLoader();
+
+            $('.home-ad .close').on('click', function(){
+                $(this).parent().toggle('fast');
+            });
         });
     </script>
 
