--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,19 +23,20 @@
                   <li><a href="/popular.html"><i class="fa fa-heart"></i> Popular Themes</a></li>
                 </ul>
               </li>
-              
-              {% for page in site.pages %}
+              <li><a href="/license">Licence</a></li>
+              <li><a href="/contact-us">Contact us</a></li>
+              <!-- {% for page in site.pages %}
                 {% if page.title %}
                 
                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
 
                 {% endif %}
-              {% endfor %}
+              {% endfor %} -->
 
               <li>
-                <a href="http://www.getbootstrap.com/" target="_blank">
-                  Bootstrap
-                  <span class="fa fa-external-link"></span></a>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BJJFT3Y6RMWVW" target="_blank">
+                  Buy us a Coffee
+                  <span class="fa fa-coffee"></span></a>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right social-links">
