--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,4 +44,12 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-4117040670644190",
+	    enable_page_level_ads: true
+	  });
+	</script>
+
 </head>
