Remove http: to support https

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,7 +1,7 @@
 
 <script src="/assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<script src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
+<script type="text/javascript" src="//apis.google.com/js/plusone.js"></script>
+<script src="//downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
 <script>
 	$(document).ready( function () {
 	    $('#wrapper').height($(document).height());
