--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,25 +18,25 @@
           <div class="twitter-btns">
 
             <a class="twitter-follow-button"
-              href="https://twitter.com/{{ site.twitter_username }}"
+              href="//twitter.com/{{ site.twitter_username }}"
               data-show-count="false"
               data-lang="en">
             Follow @{{ site.twitter_username }}
             </a>
             
 
-            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=watch&amp;count=true"  class="github-follow" ></iframe>
+            <iframe src="=//ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=watch&amp;count=true"  class="github-follow" ></iframe>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=fork&amp;count=true" class="github-fork"></iframe>
+            <iframe src="//ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=fork&amp;count=true" class="github-fork"></iframe>
 
           </div>
 
           <div>
-            <div class="g-follow" data-href="https://plus.google.com/106177833169347297877" data-rel="author"></div>
+            <div class="g-follow" data-href="//plus.google.com/106177833169347297877" data-rel="author"></div>
             <div class="g-plusone" data-size="medium"></div>
           </div>
 
-          <div class="fb-like" data-href="https://www.facebook.com/{{ site.facebook_username }}" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
+          <div class="fb-like" data-href="//www.facebook.com/{{ site.facebook_username }}" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
 
 
           
@@ -50,7 +50,7 @@
           <p><a href="/" target="_blank">{{ site.title }}</a> | Gesture by <a href="{{ site.author_url }}" target="_blank">{{ site.author }}</a></p>
           <p>Built With All The <i class="fa fa-heart"></i> In The World</p>
           <!--<p>Content Delivered By <a href="#"><img src="{{ "/assets/img/maxcdn.png" | prepend: site.url }}" alt=""></a></p> -->
-          <p>Hosted By The Awesome <a href="https://pages.github.com/" target="_blank"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
+          <p>Hosted By The Awesome <a href="//pages.github.com/" target="_blank"><img src="/assets/img/gh-logo.svg" class="gh-logo" alt=""></a></p>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
         <div class="line-divider"></div>
 
         <div class="copyrights">
-          All Themes and Templates Under The <a href="http://opensource.org/licenses/MIT" target="_blank">MIT License</a> by <a href="/">Scoop Themes</a>
+          All Themes and Templates Under The <a href="//opensource.org/licenses/MIT" target="_blank">MIT License</a> by <a href="/">Scoop Themes</a>
         </div>
 
       </div>
